--- a/page.html
+++ b/page.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
     <h1>git</h1>
     <p>git is a version control system controls on to keep tracking</p>
+    </div>
 </body>
 </html>
